--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.427.0",
+    "@aws-sdk/s3-request-presigner": "^3.427.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.4.0",
+    "fs": "^0.0.1-security",
+    "mongoose": "^7.6.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
